# starfield-datasources

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  IN_PROGRESS_dr3_mag20_excerpt.md
.github/workflows/: ci.yml
crates/bright-galaxies/: Cargo.toml
crates/bright-galaxies/data/: bright-galaxies.csv
crates/bright-galaxies/src/: lib.rs
crates/bright-galaxies/tests/: embedded.rs
crates/datasource-utils/: Cargo.toml
crates/datasource-utils/src/: cache.rs  download.rs  http.rs  lib.rs
crates/gaia/: Cargo.toml
crates/gaia-extended/: Cargo.toml
crates/gaia-extended/src/: galaxy.rs  lib.rs  parse.rs  qso.rs
crates/gaia-extended/tests/: galaxy.rs  qso.rs
crates/gaia-tools/: Cargo.toml
crates/gaia-tools/src/: cli.rs  main.rs  sort_step.rs
crates/gaia/data/: dr1-bright-star-supplement.csv  dr2-bright-star-supplement.csv  dr3-bright-star-supplement.csv
crates/gaia/src/: catalog.rs  downloader.rs  excerpt.rs  lib.rs
crates/gaia/src/common/: catalog.rs  cone.rs  core.rs  format.rs  lazy.rs  mod.rs  parse.rs  reader.rs  supplement.rs  traits.rs
crates/gaia/src/download/: client.rs  mod.rs  tap.rs
crates/gaia/src/dr1/: catalog.rs  entry.rs  mod.rs  schema.rs  supplement.rs
crates/gaia/src/dr2/: catalog.rs  entry.rs  mod.rs  schema.rs  supplement.rs
crates/gaia/src/dr3/: catalog.rs  entry.rs  mod.rs  schema.rs  supplement.rs
crates/gaia/tests/: dr1_round_trip.rs  dr1_supplement.rs  dr2_round_trip.rs  dr2_supplement.rs  dr3_excerpt.rs  dr3_excerpt_cone.rs  dr3_round_trip.rs  dr3_supplement.rs  proper_motion.rs
crates/hipparcos/: Cargo.toml
crates/hipparcos/src/: catalog.rs  downloader.rs  lib.rs
crates/horizons/: Cargo.toml
crates/horizons/src/: client.rs  lib.rs  parser.rs
crates/jplephem/: Cargo.toml
crates/jplephem/src/: calendar.rs  chebyshev.rs  daf.rs  errors.rs  kernel.rs  lib.rs  names.rs  pck.rs  spk.rs  spk_type21.rs  tests.rs
crates/jplephem/tests/: de440_integration.rs
crates/mast/: Cargo.toml
crates/mast/src/: client.rs  lib.rs  observations.rs  products.rs  wcs.rs
crates/mast/tests/: network.rs  synthetic_json.rs  wcs.rs
crates/mpc/: Cargo.toml
crates/mpc/src/: client.rs  ephemeris.rs  lib.rs  mpcorb.rs  observation.rs  observatory.rs
crates/nsa/: Cargo.toml
crates/nsa/src/: catalog.rs  downloader.rs  lib.rs  traits.rs
crates/nsa/tests/: extended_source.rs  part2_traits.rs  round_trip.rs
crates/rubin/: Cargo.toml
crates/rubin/src/: alerce.rs  ampel.rs  antares.rs  babamul.rs  fink.rs  lasair.rs  lib.rs  pitt_google.rs
crates/rubin/tests/: url_verification.rs
crates/sbdb/: Cargo.toml
crates/sbdb/src/: client.rs  lib.rs  query.rs  types.rs
crates/starfield-datasources/: Cargo.toml
crates/starfield-datasources/src/: lib.rs
docs/: gaia-multi-release-plan.md
docs/data-sources/: de-ephemeris.md  gaia-catalog.md  hipparcos-catalog.md  horizons-api.md  sbdb-api.md  spk-kernels.md
examples/: ecliptic_vectors.rs  gaia_filter.rs  horizons_lookup.rs  horizons_vectors.rs  planetary_positions.rs  sbdb_close_approach.rs  sbdb_lookup.rs
