[workspace]
resolver = "2"
members = [
    "crates/jplephem",
    "crates/horizons",
    "crates/sbdb",
    "crates/gaia",
    "crates/hipparcos",
    "crates/mpc",
    "crates/starfield-datasources",
]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/OrbitalCommons/starfield-datasources"

[workspace.dependencies]
starfield = { git = "https://github.com/OrbitalCommons/starfield.git" }
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
base64 = "0.22.1"
nalgebra = "0.32"
byteorder = "1.5"
memmap2 = "0.9"
lazy_static = "1.4"
log = "0.4"
flate2 = "1.0"
md5 = "0.7"
regex = "1.10"
rand = "0.8"
indicatif = "0.17"
