[package]
name = "starfield-bright-galaxies"
version = "0.1.0"
description = "Hand-curated supplement of nearby bright galaxies (M31, LMC, Virgo, etc.) missing from automated extragalactic catalogs"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
starfield = { workspace = true }
starfield-gaia = { version = "0.2.0", path = "../gaia" }
serde = { workspace = true }

[dev-dependencies]
tempfile = "3"
