[package]
name = "starfield-gaia-extended"
version = "0.1.0"
description = "ESA Gaia DR3 extended-source catalogs (galaxy_candidates, qso_candidates)"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
starfield = { workspace = true }
starfield-gaia = { version = "0.2.0", path = "../gaia" }
serde = { workspace = true }
flate2 = { workspace = true }
nalgebra = { workspace = true }

[dev-dependencies]
tempfile = "3"
