[package]
name = "starfield-gaia-tools"
version = "0.1.0"
description = "Command-line tools for the starfield-gaia ecosystem (excerpt + sharding)"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gaia-excerpt"
path = "src/main.rs"

[dependencies]
starfield = { workspace = true }
starfield-gaia = { version = "0.2.0", path = "../gaia", features = ["all-releases"] }
clap = { workspace = true }
indicatif = { workspace = true }
nalgebra = { workspace = true }
flate2 = { workspace = true }
