[package]
name = "starfield-gaia"
version = "0.2.0"
description = "ESA Gaia star catalog loader and downloader — DR1/DR2/DR3 support"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["dr3"]
dr1 = []
dr2 = []
dr3 = []
all-releases = ["dr1", "dr2", "dr3"]

[dev-dependencies]
tempfile = "3"

[dependencies]
starfield = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
md5 = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
nalgebra = { workspace = true }
arrow = { workspace = true }
starfield-datasource-utils = { version = "0.1.0", path = "../datasource-utils" }
