[package]
name = "starfield-hipparcos"
version = "0.1.0"
description = "Hipparcos star catalog loader and downloader"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
starfield = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }
nalgebra = { workspace = true }
flate2.workspace = true

[dev-dependencies]
tempfile = "3.26.0"
