[package]
name = "starfield-horizons"
version = "0.1.0"
description = "NASA JPL HORIZONS API client — ephemeris computation for 1.5M+ solar system objects"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
starfield = { workspace = true }
starfield-jplephem = { path = "../jplephem" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
