[package]
name = "starfield-jplephem"
version = "0.1.0"
description = "JPL Development Ephemeris reader — SPK/DAF binary format parser with Chebyshev interpolation"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nalgebra = { workspace = true }
byteorder = { workspace = true }
memmap2 = { workspace = true }
thiserror = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
approx = "0.5"
reqwest = { workspace = true, features = ["blocking"] }
tempfile = "3.26.0"
