[package]
name = "starfield-mast"
version = "0.1.0"
description = "MAST (Mikulski Archive for Space Telescopes) client — HST observations, data products, FITS downloads, WCS"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
starfield = { workspace = true }
starfield-gaia = { version = "0.2.0", path = "../gaia" }
starfield-datasource-utils = { version = "0.1.0", path = "../datasource-utils" }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
fitsio-pure = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
