[package]
name = "starfield-mpc"
version = "0.1.0"
description = "Minor Planet Center client — MPCORB catalog, observatory codes, and observation records"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
starfield = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
