[package]
name = "starfield-rubin"
version = "0.1.0"
description = "Clients for Vera C. Rubin Observatory LSST alert brokers"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
starfield = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
starfield-datasource-utils = { version = "0.1.0", path = "../datasource-utils" }
