[package]
name = "starfield-datasources"
version = "0.2.0"
description = "Astronomical data source clients for the starfield ecosystem"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["horizons", "sbdb", "gaia", "hipparcos"]
horizons = ["dep:starfield-horizons"]
sbdb = ["dep:starfield-sbdb"]
gaia = ["dep:starfield-gaia"]
hipparcos = ["dep:starfield-hipparcos"]

[dependencies]
starfield-horizons = { path = "../horizons", optional = true }
starfield-sbdb = { path = "../sbdb", optional = true }
starfield-gaia = { path = "../gaia", optional = true }
starfield-hipparcos = { path = "../hipparcos", optional = true }
