[package]
name = "starfield-datasources"
version = "0.5.0"
description = "Astronomical data source clients for the starfield ecosystem"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["horizons", "sbdb", "gaia", "hipparcos", "mpc", "rubin"]
horizons = ["dep:starfield-horizons"]
sbdb = ["dep:starfield-sbdb"]
gaia = ["dep:starfield-gaia"]
gaia-all = ["gaia", "starfield-gaia/all-releases"]
hipparcos = ["dep:starfield-hipparcos"]
mpc = ["dep:starfield-mpc"]
rubin = ["dep:starfield-rubin"]

[dependencies]
starfield-horizons = { path = "../horizons", optional = true }
starfield-sbdb = { path = "../sbdb", optional = true }
starfield-gaia = { path = "../gaia", optional = true }
starfield-hipparcos = { path = "../hipparcos", optional = true }
starfield-mpc = { path = "../mpc", optional = true }
starfield-rubin = { path = "../rubin", optional = true }
