[package]
name = "starfield-datasources"
version = "0.9.0"
description = "Astronomical data source clients for the starfield ecosystem"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["horizons", "sbdb", "gaia", "hipparcos", "mpc", "nsa", "rubin"]
horizons = ["dep:starfield-horizons"]
sbdb = ["dep:starfield-sbdb"]
gaia = ["dep:starfield-gaia"]
gaia-all = ["gaia", "starfield-gaia/all-releases"]
gaia-extended = ["gaia", "dep:starfield-gaia-extended"]
bright-galaxies = ["gaia", "dep:starfield-bright-galaxies"]
hipparcos = ["dep:starfield-hipparcos"]
mast = ["dep:starfield-mast"]
mpc = ["dep:starfield-mpc"]
nsa = ["dep:starfield-nsa"]
rubin = ["dep:starfield-rubin"]

[dependencies]
starfield-horizons = { path = "../horizons", optional = true }
starfield-sbdb = { path = "../sbdb", optional = true }
starfield-gaia = { path = "../gaia", optional = true }
starfield-gaia-extended = { path = "../gaia-extended", optional = true }
starfield-bright-galaxies = { path = "../bright-galaxies", optional = true }
starfield-hipparcos = { path = "../hipparcos", optional = true }
starfield-mast = { path = "../mast", optional = true }
starfield-mpc = { path = "../mpc", optional = true }
starfield-nsa = { path = "../nsa", optional = true }
starfield-rubin = { path = "../rubin", optional = true }
